[package]
name = "beastlink"
version = "0.1.0"
authors = ["Spyros Stathopoulos <spyros@arc-instruments.co.uk>"]
description = "Rust bindings for CESYS beastlink"
edition = "2018"
license = "CSL-1.0"
homepage = "http://cesys.com"
repository = "https://github.com/arc-instruments/beastlink-rs"

exclude = ["contrib/*"]

[lib]
name = "beastlink"

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
ctor = "0.1"
libc = "0.2"

[dev-dependencies]
serial_test = "0.4"
