[package]
name = "beastlink"
version = "1.0.0"
authors = ["Spyros Stathopoulos <spyros@arc-instruments.co.uk>"]
description = "Rust bindings for CESYS beastlink"
edition = "2018"
license-file = "LICENSE"
homepage = "https://github.com/arc-instruments/beastlink-rs"
repository = "https://github.com/arc-instruments/beastlink-rs"
keywords = ["fpga", "bindings"]

exclude = ["contrib/*"]

[lib]
name = "beastlink"

[dependencies]
num-derive = "^0.3"
num-traits = "^0.2"
ctor = "^0.1"
libc = "^0.2"

[dev-dependencies]
serial_test = "^0.4"
